<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stud_live"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="84dp"
        android:layout_height="67dp"
        android:translationX="30dp"
        app:srcCompat="@drawable/kaflogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/StudliveBut"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/BottomRectangle"
            app:layout_constraintEnd_toEndOf="@+id/BottomRectangle"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/BottomRectangle" />

        <Button
            android:id="@+id/GidBut"
            android:layout_width="34dp"
            android:layout_height="32dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/BottomRectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.726"
            app:layout_constraintStart_toStartOf="@+id/BottomRectangle"
            app:layout_constraintTop_toTopOf="@+id/Logo"
            app:layout_constraintVertical_bias="0.549" />

        <Button
            android:id="@+id/ClubBut"
            android:layout_width="35dp"
            android:layout_height="31dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/BottomRectangle"
            app:layout_constraintEnd_toEndOf="@+id/BottomRectangle"
            app:layout_constraintHorizontal_bias="0.268"
            app:layout_constraintStart_toStartOf="@+id/BottomRectangle"
            app:layout_constraintTop_toTopOf="@+id/Logo"
            app:layout_constraintVertical_bias="0.541" />

        <Button
            android:id="@+id/MainBut"
            android:layout_width="34dp"
            android:layout_height="30dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/BottomRectangle"
            app:layout_constraintEnd_toEndOf="@+id/BottomRectangle"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="@+id/BottomRectangle"
            app:layout_constraintTop_toTopOf="@+id/Logo"
            app:layout_constraintVertical_bias="0.493" />

        <Button
            android:id="@+id/ServiceBut"
            android:layout_width="30dp"
            android:layout_height="27dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/BottomRectangle"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toStartOf="@+id/BottomRectangle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954" />

        <View
            android:id="@+id/BottomRectangle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/CircleBelowLogo"
            android:layout_width="91dp"
            android:layout_height="89dp"

            android:background="@drawable/rounded_corner2"
            app:layout_constraintBottom_toBottomOf="@+id/BottomRectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.977" />

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/logo"
            android:translationX="1.5dp"
            android:translationY="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/BottomRectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/stlive" />

        <ImageView
            android:id="@+id/GidImage"
            android:layout_width="34.5dp"
            android:layout_height="31dp"
            android:contentDescription="@string/gid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/BottomRectangle"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="@+id/CircleBelowLogo"
            app:layout_constraintTop_toTopOf="@+id/CircleBelowLogo"
            app:layout_constraintVertical_bias="0.513"
            app:srcCompat="@drawable/gid" />

        <ImageView
            android:id="@+id/ServiceImage"
            android:layout_width="29dp"
            android:layout_height="26dp"
            android:contentDescription="@string/service"
            android:translationX="-10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/BottomRectangle"
            app:layout_constraintHorizontal_bias="0.768"
            app:layout_constraintStart_toEndOf="@+id/GidImage"
            app:layout_constraintTop_toTopOf="@+id/CircleBelowLogo"
            app:layout_constraintVertical_bias="0.531"
            app:srcCompat="@drawable/service" />

        <TextView
            android:id="@+id/GidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_mono_light"
            android:text="@string/gid"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/GidImage"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/GidImage"
            app:layout_constraintTop_toBottomOf="@+id/GidImage"
            app:layout_constraintVertical_bias="0.437" />

        <TextView
            android:id="@+id/ServiceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_mono_light"
            android:text="@string/service"
            android:textColor="@color/white"
            android:translationX="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ServiceImage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/ServiceImage"
            app:layout_constraintTop_toBottomOf="@+id/ServiceImage"
            app:layout_constraintVertical_bias="0.533" />

        <ImageView
            android:id="@+id/ClubsImage"
            android:layout_width="35dp"
            android:layout_height="31dp"
            android:contentDescription="@string/clubs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/GidImage"
            app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintStart_toStartOf="@+id/BottomRectangle"
            app:layout_constraintTop_toTopOf="@+id/CircleBelowLogo"
            app:srcCompat="@drawable/greenclubs" />

        <ImageView
            android:id="@+id/MainImage"
            android:layout_width="35dp"
            android:layout_height="31dp"
            android:contentDescription="@string/main"
            app:layout_constraintBottom_toBottomOf="@+id/BottomRectangle"
            app:layout_constraintEnd_toStartOf="@+id/ClubsImage"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CircleBelowLogo"
            app:srcCompat="@drawable/whitemain" />

        <TextView
            android:id="@+id/ClubsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_mono_light"
            android:text="@string/clubs"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ClubsImage"
            app:layout_constraintStart_toStartOf="@+id/ClubsImage"
            app:layout_constraintTop_toBottomOf="@+id/ClubsImage" />

        <TextView
            android:id="@+id/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_mono_light"
            android:text="@string/main"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/MainImage"
            app:layout_constraintStart_toStartOf="@+id/MainImage"
            app:layout_constraintTop_toBottomOf="@+id/MainImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>